[tool.poetry]
name = "audio-processing-with-python"
version = "0.1.0"
description = ""
authors = ["Mateus Assis <mateus.d.assis.silva@gmail.com>"]
readme = "README.md"
packages = [{include = "audio_processing_with_python"}]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
scipy = "^1.11.1"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
